臥龍控股 html/css 練習 header&nav&new1 完成

--- a/index.html
+++ b/index.html
@@ -75,7 +75,15 @@
                 <p class="info1">公司成立於1984年，經過近30年的發展</p>
                 <p class="info2">已成為電氣製造，房地產開發和金融投資三業並舉的綜合性跨國...</p>
             </div>
-            <div class="section3"></div>
+            <div class="section3">
+                <h3>人才招聘</h3>
+                <p class="info3">
+                    培養一流的人才，鑄造一流的工程實現員工與企業的共同發展</p>
+                <div class="morebtn">
+                    <input type="button" value="MORE &nbsp →" onclick="location.href='https://www.google.com.tw/'">
+                </div>
+                    
+            </div>
         </div>
         <div class="new-2">
         </div>
